Cocked up some merging as I used my p5 game starter

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+    <link rel="shortcut icon" type="image/png" href="https://pbs.twimg.com/profile_images/1168932795185586176/wvIE7fUn_400x400.jpg"/>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
 </head>
 <body>
-<script src="sketch.js"></script>
-<script src="Player.js"></script>
+    <script>window.p5 = p5;</script>
+    <script src="sketch.js" type="module" defer></script>
 </body>
 </html>
