--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
 
 </head>
 <body>
-    <script>window.p5 = p5;</script>
+
+<a href="https://github.com/login/oauth/authorize?client_id=0ebd20dd11e06586d4b8&redirect_uri=http://localhost:4000/success">Login with github</a>
+
+<script>window.p5 = p5;</script>
     <script src="sketch.js" type="module" defer></script>
 </body>
 </html>
