added a silly button, need to figure out the flow of things

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 
-<a href="https://github.com/login/oauth/authorize?client_id=0ebd20dd11e06586d4b8&redirect_uri=http://localhost:4000/success">Login with github</a>
+<!--<a href="https://github.com/login/oauth/authorize?client_id=0ebd20dd11e06586d4b8&redirect_uri=http://localhost:4000/success">-->
+<!--    <img src="gh-login-button.png" alt="login with github button" >-->
+<!--</a>-->
+
 
 <script>window.p5 = p5;</script>
     <script src="sketch.js" type="module" defer></script>
